ves-middle/tests/t3_test_globals_are_forward_declared.test
fn mutually_recursive1(a) {
    mutually_recursive2(a)
}
fn mutually_recursive2(a) { 
    mutually_recursive1(a)
}


print(global, "error")
mut global
print(global, "ok")

%output

error: Attempted to use the variable `global` before its declaration
   ┌─ <source: #e1fbb4a350ca6ff5>:9:7
   │
 9 │ print(global, "error")
   │       ^^^^^^
10 │ mut global
   │     ------ First declared on line 10
